fix(client): skeleton going out of bounds in container

--- a/client/src/style/main.less
+++ b/client/src/style/main.less
@@ -112,11 +112,6 @@ tbody > tr > td > .security-value-loss {
     margin-bottom: 0;
 }
 
-.ant-skeleton.ant-skeleton-active .ant-skeleton-content .ant-skeleton-title,
-.ant-skeleton.ant-skeleton-active .ant-skeleton-content .ant-skeleton-paragraph > li {
-    animation: ~'@{skeleton-prefix-cls}-loading' 1s linear infinite;
-}
-
 // Tooltip
 
 .ant-tooltip {
